--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "changelog"
   ],
   "dependencies": {
+    "minimist": "1.1.0",
     "util-io": "~1.4.0",
-    "minimist": "1.1.0"
+    "tryrequire": "~1.0.0"
   },
   "license": "MIT"
 }
