--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
   "description": "Generate changelog",
   "homepage": "http://cloudcmd.io",
+  "main": "lib/changelog.js",
   "bin": {
     "changelog": "bin/changelog.js"
   },
