--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   ],
   "dependencies": {
     "minimist": "1.1.0",
-    "util-io": "~1.6.1",
-    "tryrequire": "~1.0.0"
+    "prepend": "~1.0.0",
+    "tryrequire": "~1.0.0",
+    "util-io": "~1.6.1"
   },
   "license": "MIT"
 }
