--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "execon": "~1.0.1",
     "minimist": "1.1.0",
     "rendy": "~1.0.0",
+    "shortdate": "~1.0.0",
     "tryrequire": "~1.1.4"
   },
   "license": "MIT"
