--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "execon": "~1.2.0",
-    "minimist": "1.1.0",
+    "minimist": "~1.2.0",
     "rendy": "~1.1.0",
     "shortdate": "~1.0.0",
     "tryrequire": "~1.1.4"
