feature(package) shortdate v1.2.0

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+
   "name": "changelog-io",
   "version": "1.4.3",
   "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
@@ -19,7 +19,7 @@
     "execon": "~1.2.0",
     "minimist": "~1.2.0",
     "rendy": "~1.1.0",
-    "shortdate": "~1.1.0",
+    "shortdate": "^1.2.0",
     "tryrequire": "~1.1.4"
   },
   "license": "MIT"
