--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "changelog"
   ],
   "dependencies": {
-    "execon": "~1.2.0",
-    "minimist": "~1.2.0",
-    "rendy": "~1.1.0",
+    "execon": "^1.2.0",
+    "minimist": "^1.2.0",
+    "rendy": "^1.1.0",
     "shortdate": "^1.2.0",
-    "tryrequire": "~1.1.4"
+    "tryrequire": "^1.1.4"
   },
   "license": "MIT"
 }
