feature(changelog) drop support of node < 4: add ability to find package in parent directories

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "changelog"
   ],
   "dependencies": {
+    "currify": "^2.0.3",
     "execon": "^1.2.0",
     "minimist": "^1.2.0",
     "rendy": "^1.1.0",
     "shortdate": "^1.2.0",
     "tryrequire": "^1.1.4"
+  },
+  "engines": {
+    "node": ">=4"
   },
   "license": "MIT"
 }
