--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "minimist": "^1.2.0",
     "read-pkg-up": "^2.0.0",
     "rendy": "^1.1.0",
-    "shortdate": "^1.2.0",
-    "tryrequire": "^1.1.4"
+    "shortdate": "^1.2.0"
   },
   "engines": {
     "node": ">=4"
