--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "changelog"
   ],
   "scripts": {
-    "lint": "eslint lib"
+    "lint": "madrun lint",
+    "fix:lint": "madrun fix:lint"
   },
   "dependencies": {
     "currify": "^3.0.0",
@@ -32,6 +33,9 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.3.0",
-    "eslint-plugin-node": "^10.0.0"
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-putout": "^2.0.0",
+    "madrun": "^3.0.1",
+    "putout": "^5.11.1"
   }
 }
