--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "minimist": "^1.2.0",
     "read-pkg-up": "^7.0.0",
     "rendy": "^3.0.1",
-    "shortdate": "^2.0.0"
+    "shortdate": "^2.0.0",
+    "try-to-catch": "^3.0.0"
   },
   "engines": {
     "node": ">=8"
