--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Generate changelog",
   "homepage": "http://cloudcmd.io",
   "main": "lib/changelog.js",
+  "type": "module",
   "bin": {
     "changelog": "bin/changelog.js"
   },
@@ -17,7 +18,9 @@
   ],
   "scripts": {
     "lint": "madrun lint",
-    "fix:lint": "madrun fix:lint"
+    "fix:lint": "madrun fix:lint",
+    "test": "madrun test",
+    "coverage": "madrun coverage"
   },
   "dependencies": {
     "currify": "^4.0.0",
@@ -33,10 +36,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "c8": "^7.8.0",
     "eslint": "^7.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^7.3.1",
     "madrun": "^8.8.1",
-    "putout": "^15.8.0"
+    "putout": "^15.8.0",
+    "supertape": "^6.0.5"
   }
 }
