--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "license": "MIT",
   "devDependencies": {
     "c8": "^7.8.0",
-    "eslint": "^7.22.0",
+    "eslint": "^8.0.0-beta.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^9.2.1",
     "madrun": "^8.8.1",
