--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^9.2.1",
     "madrun": "^8.8.1",
+    "mock-import": "^1.6.0",
+    "montag": "^1.2.1",
     "putout": "^19.0.0",
     "supertape": "^6.0.5"
   }
