--- a/package.json
+++ b/package.json
@@ -16,10 +16,18 @@
     "changelog"
   ],
   "scripts": {
-    "lint": "madrun lint",
-    "fix:lint": "madrun fix:lint",
     "test": "madrun test",
-    "coverage": "madrun coverage"
+    "coverage": "madrun coverage",
+    "lint": "madrun lint",
+    "fresh:lint": "madrun fresh:lint",
+    "lint:fresh": "madrun lint:fresh",
+    "fix:lint": "madrun fix:lint",
+    "report": "madrun report",
+    "watcher": "madrun watcher",
+    "watch:test": "madrun watch:test",
+    "watch:lint": "madrun watch:lint",
+    "watch:tape": "madrun watch:tape",
+    "watch:coverage": "madrun watch:coverage"
   },
   "dependencies": {
     "currify": "^4.0.0",
