fix(changelog) simplify

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "read-pkg-up": "^8.0.0",
     "rendy": "^3.0.1",
     "shortdate": "^2.0.0",
-    "try-to-catch": "^3.0.0"
+    "try-catch": "^3.0.0"
   },
   "engines": {
     "node": ">=14"
