--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "license": "MIT",
   "devDependencies": {
     "c8": "^7.8.0",
-    "eslint": "^8.0.0-beta.0",
+    "eslint": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^11.15.1",
     "madrun": "^8.8.1",
