--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "c8": "^7.8.0",
     "escover": "^2.1.1",
     "eslint": "^8.3.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-putout": "^16.9.0",
     "madrun": "^9.0.2",
     "mock-import": "^3.0.1",
