--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "type": "git",
     "url": "git://github.com/coderaiser/changelog-io.git"
   },
-  "keywords": [
-    "changelog"
-  ],
+  "keywords": ["changelog"],
   "scripts": {
     "test": "madrun test",
     "coverage": "madrun coverage",
