--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "type": "git",
     "url": "git://github.com/coderaiser/changelog-io.git"
   },
-  "keywords": [
-    "changelog"
-  ],
+  "keywords": ["changelog"],
   "scripts": {
     "test": "madrun test",
     "coverage": "madrun coverage",
@@ -43,7 +41,6 @@
   "license": "MIT",
   "devDependencies": {
     "c8": "^9.1.0",
-    "escover": "^4.1.0",
     "eslint": "^8.3.0",
     "eslint-plugin-n": "^17.3.1",
     "eslint-plugin-putout": "^22.3.1",
